inserção do rodapé

--- a/index.html
+++ b/index.html
@@ -17,12 +17,28 @@
             </span>
             <nav>
                 <a href="#">Criar conta</a> |
-                <a href="login.html">Login</a>
+                <a href="login.html">Acessar</a>
             </nav>
         </div>
    </header>
    <div class="fundo">
         <img src="./Imagens/Fundo página inicial.jpg" width="100%" alt="">
+   </div>
+   <div id="rodape">
+    <footer>
+        <div class="links-rodape">
+            <a href="#">Central de ajuda</a> <br>
+            <a href="#">Fale conosco</a> <br>
+            <a href="#">Ouvidoria</a> <br>
+        </div>
+        <h3>
+            <span>Golden</span>Bank
+        </h3>
+        <div class="bandeiras">
+            <img src="./Imagens/Elo.png" height="20px" alt="">
+        </div>
+               
+    </footer>
    </div>
 </body>
 </html>
