--- a/login.html
+++ b/login.html
@@ -37,5 +37,21 @@
         </div>
        
    </div>
+   <div id="rodape">
+    <footer>
+        <div class="links-rodape">
+            <a href="#">Central de ajuda</a> <br>
+            <a href="#">Fale conosco</a> <br>
+            <a href="#">Ouvidoria</a> <br>
+        </div>
+        <h3>
+            <span>Golden</span>Bank
+        </h3>
+        <div class="bandeiras">
+            <img src="./Imagens/Elo.png" height="20px" alt="">
+        </div>
+               
+    </footer>
+   </div>
 </body>
 </html>
