criação da página cadastro

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="./Imagens/Logo Centro.png" width="100%" height="100px" alt="">
             </span>
             <nav>
-                <a href="#">Criar conta</a> |
+                <a href="cadastro.html">Criar conta</a> |
                 <a href="login.html">Acessar</a>
             </nav>
         </div>
