Instalação da página menu e funcionalidades em JS

--- a/cadastro.html
+++ b/cadastro.html
@@ -17,7 +17,7 @@
             </span>
             <nav>
                 <a href="index.html">Home</a> |
-                <a href="#">Criar conta</a>
+                <a href="login.html">Login</a>
             </nav>
         </div>
    </header>
@@ -30,6 +30,7 @@
                 E-mail<input type="email" placeholder="E-mail">
                 CPF<input type="text" placeholder="CPF">
                 Nascimento<input type="date" placeholder="Nascimento">
+                Cadastre uma senha<input type="password" placeholder="Senha" required>
             </form>
             <form class="login-form2">
                 Logadouro<input type="text" placeholder="Logadouro">
@@ -37,6 +38,7 @@
                 Cidade<input type="text" placeholder="Cidade">
                 Bairro<input type="text" placeholder="Bairro">
                 CEP<input type="text" placeholder="CEP"> 
+                Repita a senha cadastrada<input type="password" placeholder="Senha" required>
             </form>
         </div>
         <div class="botao">
@@ -59,5 +61,6 @@
                
     </footer>
    </div>
+   <script src="./script/script.js"></script>
 </body>
 </html>
