--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             </span>
             <nav>
                 <a href="cadastro.html">Criar conta</a> |
-                <a href="login.html">Acessar</a>
+                <a href="login.html">Login</a>
             </nav>
         </div>
    </header>
+   <h1>Bem-vindo</h1>
    <div class="fundo">
         <img src="./Imagens/Fundo página inicial.jpg" width="100%" alt="">
    </div>
@@ -40,5 +41,6 @@
                
     </footer>
    </div>
+   <script src="./script/script.js"></script>
 </body>
 </html>
